# agent-kgpacks

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Makefile  PHASE2_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PROGRESS_REPORT.md  README.md  SECURITY_FIXES.md  STEP13_LOCAL_TESTING_RESULTS.md  STEP13_TEST_RESULTS.md  STEP19_OUTSIDE_IN_TEST.md  config.yaml  conftest.py  download_kg.sh  eval_relationships.py  fix-new-scripts-workstreams.json  index.scip  launcher.py  manual_integration_test.py  mcp_server.py  mkdocs.yml  next-steps-workstreams.json  pyproject.toml  pyrightconfig.json  requirements.txt  round1-workstreams.json  round2-workstreams.json  round3-workstreams.json  round4-workstreams.json  round5-workstreams.json  run.sh  test_100_articles.py  test_10_articles.py  test_1k_articles.py  (+6 more)
.amplihack/: kuzu_db.wal
.claude/context/: PROJECT.md  PROJECT.md.bak
.claude/runtime/: sessions.jsonl
.github/: markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: build-pack.yml
.github/scripts/: check-banned-patterns.sh
.github/workflows/: build-pack.yml  ci.yml  docs.yml  pack-freshness.yml  repo-hygiene.yml  security.yml
backend/: API.md  README.md  __init__.py  config.py  main.py  pytest.ini  rate_limit.py  requirements.txt
backend/db/: __init__.py  connection.py
backend/models/: __init__.py  article.py  chat.py  common.py  graph.py  search.py
backend/services/: __init__.py  article_service.py  graph_service.py  search_service.py  summary_utils.py
backend/tests/: __init__.py  conftest.py  test_articles_api.py  test_chat_api.py  test_chat_stream.py  test_connection.py  test_graph_api.py  test_rate_limit.py  test_search_api.py
backups/physics-expert-wip-20260225-025201/: README.md  kg_config.json  manifest.json  skill.md  topics.txt
bootstrap/: __init__.py  quickstart.py
bootstrap/data/: seeds_1k.json  test_link_discovery.db
bootstrap/docs/: 10-article-test.md  architecture-specification.md  embedding-model-choice.md  expansion-phase-plan.md  implementation-roadmap.md  orchestrator-validation.md  phase1-summary.md  phase2-summary.md  phase3-orchestrator-summary.md  research-findings.md  seed-agent.md  seed-selection-strategy.md  state-machine.md  wikipedia-api-validation.md
bootstrap/examples/: wikipedia_api_example.py
bootstrap/schema/: __init__.py  ryugraph_schema.py
bootstrap/scripts/: README.md  demo_monitor.py  example_monitor_usage.sh  explore.py  monitor_expansion.py  optimize_batch.py  select_1k_seeds.py  test_monitor.py
bootstrap/src/: __init__.py  config.py  utils.py
bootstrap/tests/: conftest.py  test_integration.py  test_queries.json
data/: pack_registry.json  test_seeds.json
data/few_shot/: physics_examples.json
data/packs/: all_packs_evaluation.json
docs/: CLI_PACK_COMMANDS.md  catalog.md  ci-pack-building.md  index.md  knowledge-packs-phase1-summary.md  llm-seed-researcher.md  pack-freshness-ci.md
docs/concepts/: architecture.md  bfs-link-expansion.md  content-source-design.md  how-packs-work.md  phase1-enhancements-design.md  retrieval-enhancements-design.md  retrieval-pipeline.md
docs/design/: exception-handling.md  knowledge-packs.md
docs/evaluation/: improving-accuracy.md  methodology.md  (+1 more)
examples/: query_kg_agent.py
frontend/: DEVELOPMENT.md  PWA.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
scripts/: audit_pack_content.py  build_anthropic_api_expert_pack.py  build_autogen_expert_pack.py  build_azure_ai_foundry_pack.py  build_azure_lighthouse_pack.py  build_bicep_infrastructure_pack.py  build_claude_agent_sdk_pack.py  build_cpp_pack.py  build_crew_ai_expert_pack.py  build_csharp_pack.py  build_docker_expert_pack.py  build_dotnet_pack.py  build_dspy_expert_pack.py  build_fabric_direct.py  build_fabric_graph_gql_expert_pack.py  build_fabric_graphql_expert_pack.py  build_fabric_pack.py  build_github_actions_advanced_pack.py  build_github_copilot_sdk_pack.py  build_go_pack.py  build_huggingface_transformers_pack.py  build_java_pack.py  build_kotlin_pack.py  build_kubernetes_networking_pack.py  build_ladybugdb_expert_pack.py  build_langchain_expert_pack.py  build_llamaindex_expert_pack.py  build_mcp_protocol_pack.py  build_microsoft_agent_framework_pack.py  build_nextjs_expert_pack.py  build_openai_api_expert_pack.py  build_opencypher_pack.py  build_opentelemetry_expert_pack.py  build_pack_from_issue.py  build_pack_generic.py  build_physics_pack.py  build_postgresql_internals_pack.py  build_prompt_engineering_pack.py  build_python_pack.py  build_react_expert_pack.py  (+34 more)
skills/: README.md
tests/: test-amplihack-hooks-complete.sh  test_repository_hygiene.py
wikigr/: __init__.py  cli.py  utils.py
(+461 files in other folders)
