[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikigr"
version = "0.1.0"
description = "Wikipedia Knowledge Graph with semantic search and graph traversal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "WikiGR Contributors" }
]
keywords = [
    "wikipedia",
    "knowledge-graph",
    "semantic-search",
    "vector-search",
    "graph-database",
    "kuzu",
    "embeddings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "kuzu>=0.11.3,<0.12.0",
    "sentence-transformers>=5.2.0,<6.0.0",
    "requests>=2.32.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "torch>=2.10.0,<3.0.0",
    "transformers>=5.1.0,<6.0.0",
    "safetensors>=0.7.0,<1.0.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "tqdm>=4.67.0,<5.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "anthropic>=0.39.0,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "feedparser>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "ruff>=0.8.0,<1.0.0",
    "pyright>=1.1.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

backend = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "slowapi==0.1.9",
    "sse-starlette>=2.0.0,<3.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
]

test = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
]

[project.scripts]
wikigr = "wikigr.cli:main"
wikigr-monitor = "bootstrap.scripts.monitor_expansion:main"
wikigr-schema = "bootstrap.schema.ryugraph_schema:main"
wikigr-explore = "bootstrap.scripts.explore:main"

[project.urls]
Homepage = "https://github.com/rysweet/wikigr"
Repository = "https://github.com/rysweet/wikigr"
Documentation = "https://github.com/rysweet/wikigr/tree/main/bootstrap/docs"
Issues = "https://github.com/rysweet/wikigr/issues"

[tool.hatch.build.targets.wheel]
packages = ["bootstrap", "wikigr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"test_*.py" = ["ARG001", "ARG002"]  # Unused function arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["bootstrap/src", "bootstrap/schema", "bootstrap/scripts", "backend"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "build",
    "dist",
    "**/.eggs",
    "**/examples",
    "**/tests"
]
strict = []
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportAttributeAccessIssue = "warning"
reportOptionalMemberAccess = "warning"
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["bootstrap/src/embeddings/tests", "bootstrap/src/expansion/tests", "bootstrap/src/wikipedia/tests", "bootstrap/src/database/tests", "bootstrap/src/query/tests", "bootstrap/tests", "tests/agent", "tests/packs/eval"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=bootstrap/src",
    "--cov=wikigr/agent",
    "--cov-report=term-missing",
    "--timeout=60",
]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["bootstrap/src", "wikigr/agent"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "pytest-timeout>=2.4.0",
]
